# scilla-rtl

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  clang-dev-tools.cmake  gdb-helper  output
.github/workflows/: workflow.yml  workflow.yml~
include/ScillaRTL/: DLog.h  Debug.h  Errors.h  ScillaExec.h  Utils.h
include/ScillaVM/: Debug.h  Errors.h  JITD.h  SRTL.h  ScillaExec.h  Utils.h
include/scillavm/: jitd.h
libScillaRTL/: CMakeLists.txt  DLog.cpp  Debug.cpp  ObjManager.h  SRTL.cpp  SRTL.h  SafeInt.cpp  SafeInt.h  ScillaBuiltins.cpp  ScillaBuiltins.h  ScillaExecImpl.cpp  ScillaExecImpl.h  ScillaTypes.cpp  ScillaTypes.h  ScillaValue.cpp  ScillaValue.h  SharedObject.h  Utils.cpp
libjitd/: CMakeLists.txt  JITD.cpp  SharedObject.h  jitd.cpp
libsrtl/: CMakeLists.txt  Debug.cpp  ObjManager.h  SRTL.cpp  SRTL.h  SafeInt.cpp  SafeInt.h  ScillaBuiltins.cpp  ScillaBuiltins.h  ScillaExecImpl.cpp  ScillaExecImpl.h  ScillaTypes.cpp  ScillaTypes.h  ScillaValue.cpp  ScillaValue.h  SharedObject.h  Utils.cpp  Utils.h  scilla_functions.cpp  scilla_functions.h  scilla_types.h  srtl.cpp
runners/: CMakeLists.txt  expr-runner.cpp  scilla-runner.cpp
scripts/: build_ci.sh  build_ci_macos.sh  dbuild_ci.sh  dbuild_ci_macos.sh  gen_expr_dtest.sh  gen_expr_test.sh  gen_expr_tests.sh  test_migrate.py  update_contrs.sh
testsuite/: CMakeLists.txt  ContrTests.cpp  ExprExecTests.cpp  SafeIntTests.cpp  StateJsonTests.cpp  StateJsonUtils.cpp  StateJsonUtils.h  Testsuite.cpp  Testsuite.h  TypeDescrs.cpp  TypeDescrs.h  TypeParserTests.cpp  TypeTests.cpp
testsuite/contr/: accept.contrinfo.json  accept.dbg.ll  accept.ll  accept.message_Accept1.json  accept.message_Accept2.json  accept.message_Accept3.json  accept.output_Accept1.json  accept.output_Accept2.json  accept.output_Accept3_fail.txt  accept.output_Accept3_succ.json  accept.state_00.json  accept.state_01.json  accounting_tests.contrinfo.json  accounting_tests.dbg.ll  accounting_tests.ll  accounting_tests.ostate_1.json  accounting_tests.ostate_10.json  accounting_tests.ostate_15.json  accounting_tests.ostate_17.json  accounting_tests.ostate_18.json  accounting_tests.ostate_21.json  accounting_tests.ostate_4.json  accounting_tests.ostate_6.json  accounting_tests.ostate_7.json  accounting_tests.ostate_9.json  accounting_tests.output_1.json  accounting_tests.output_10.json  accounting_tests.output_100.json  accounting_tests.output_101.json  accounting_tests.output_102.json  accounting_tests.output_103.json  accounting_tests.output_104.json  accounting_tests.output_105.json  accounting_tests.output_106.json  accounting_tests.output_107.json  accounting_tests.output_108.json  accounting_tests.output_109.json  accounting_tests.output_11.json  accounting_tests.output_12.json  accounting_tests.output_13.json  (+438 more)
testsuite/expr/: ackermann.dbg.ll  ackermann.ll  ackermann.ll.result  ackermann_3_7.dbg.ll  ackermann_3_7.ll  ackermann_3_7.ll.result  adt-fun.dbg.ll  adt-fun.ll  adt-fun.ll.result  builtin-ecdsa_recover.dbg.ll  builtin-ecdsa_recover.ll  builtin-ecdsa_recover.ll.result  builtin-isqrt.dbg.ll  builtin-isqrt.ll  builtin-isqrt.ll.result  builtin-pow.dbg.ll  builtin-pow.ll  builtin-pow.ll.result  builtin-schnorr_get_address.dbg.ll  builtin-schnorr_get_address.ll  builtin-schnorr_get_address.ll.result  builtin_add_int256.dbg.ll  builtin_add_int256.ll  builtin_add_int256.ll.result  builtin_add_int32.dbg.ll  builtin_add_int32.ll  builtin_add_int32.ll.result  builtin_add_uint256.dbg.ll  builtin_add_uint256.ll  builtin_add_uint256.ll.result  builtin_add_uint32.dbg.ll  builtin_add_uint32.ll  builtin_add_uint32.ll.result  builtin_baddsub.dbg.ll  builtin_baddsub.ll  builtin_baddsub.ll.result  builtin_bech32-invalid.dbg.ll  builtin_bech32-invalid.ll  builtin_bech32-invalid.ll.result  builtin_bech32.dbg.ll  (+233 more)
testsuite/state_jsons/: int_types.json  list_types.json  map_types.json  pair_types.json  prim_types.json  string_invalid.json  uint_types.json
